--- a/app/src/main/res/layout/new_scan_pay_floating_button.xml
+++ b/app/src/main/res/layout/new_scan_pay_floating_button.xml
@@ -26,7 +26,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:fabCustomSize="80dp"
-    android:src="@drawable/scan_and_pay2"
+    android:src="@drawable/group_19"
     app:maxImageSize="50dp"
     android:layout_marginEnd="30dp"
     app:backgroundTint="@color/white"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabCustomSize="80dp"
-        android:src="@drawable/emaisha_pay2"
+        android:src="@drawable/group_23"
         app:maxImageSize="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="30dp"
