--- a/app/src/main/res/navigation/wallet_home_navigation.xml
+++ b/app/src/main/res/navigation/wallet_home_navigation.xml
@@ -249,6 +249,9 @@
             <action
                 android:id="@+id/action_walletAccountFragment2_to_walletRewardsFragment2"
                 app:destination="@id/walletRewardsFragment2" />
+            <action
+                android:id="@+id/action_walletAccountFragment2_to_scanAndPayDialog"
+                app:destination="@id/scanAndPayDialog" />
 
         </fragment>
         <fragment
@@ -455,6 +458,9 @@
         <action
             android:id="@+id/action_walletRewardsFragment2_to_navigation"
             app:destination="@id/navigation" />
+        <action
+            android:id="@+id/action_walletRewardsFragment2_to_scanAndPayDialog"
+            app:destination="@id/scanAndPayDialog" />
 
     </fragment>
 
