Added update security questions to account and edited order cards and details

--- a/app/src/main/res/layout/online_order_detail_item.xml
+++ b/app/src/main/res/layout/online_order_detail_item.xml
@@ -9,10 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="8"
-        android:fontFamily="@font/josefin_sans"
         android:padding="5dp"
         android:text="2 x Weed Master"
-        android:textColor="#B9B9B9"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18dp" />
 
 
