--- a/app/src/main/res/layout/fragment_online_order_details.xml
+++ b/app/src/main/res/layout/fragment_online_order_details.xml
@@ -67,7 +67,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
-                        android:scaleType="center"
+                        android:layout_gravity="bottom"
                         android:src="@drawable/ic_pending__1_" />
 
                     <TextView
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8.8"
                         android:text="Pending"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -95,8 +95,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
-                        android:src="@drawable/ic_profile"
-                        app:tint="#31244A"/>
+                        android:layout_gravity="bottom"
+                        android:src="@drawable/ic_profile" />
 
                     <TextView
                         android:id="@+id/txt_online_order_customer_name"
@@ -104,7 +104,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8.8"
                         android:text="Zimula John"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:layout_gravity="center_vertical"/>
@@ -124,6 +124,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
+                        android:layout_gravity="bottom"
                         android:src="@drawable/ic_phone_call" />
 
                     <TextView
@@ -132,7 +133,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8.8"
                         android:text="0704843426"
-                        android:textColor="#31244A"
+                        android:textColor="#123365"
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
@@ -152,6 +153,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/ic_envelope" />
 
                     <TextView
@@ -160,7 +162,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8.8"
                         android:text="Zimula@gmail.com"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
@@ -222,7 +224,7 @@
                         android:layout_weight="8"
                         android:padding="5dp"
                         android:text="Sub Total"
-                        android:textColor="#31244A"/>
+                        android:textColor="@color/colorPrimaryDark"/>
 
                     <TextView
                         android:id="@+id/txt_sub_total_price"
@@ -232,7 +234,7 @@
                         android:gravity="end"
                         android:padding="5dp"
                         android:text="5000"
-                        android:textColor="#31244A" />
+                        android:textColor="@color/colorPrimaryDark" />
 
                 </LinearLayout>
 
@@ -247,7 +249,7 @@
                         android:layout_weight="8"
                         android:padding="5dp"
                         android:text="Delivery"
-                        android:textColor="#31244A" />
+                        android:textColor="@color/colorPrimaryDark" />
 
                     <TextView
                         android:id="@+id/txt_online_delivery_price"
@@ -257,7 +259,7 @@
                         android:gravity="end"
                         android:padding="5dp"
                         android:text="5000.0"
-                        android:textColor="#31244A" />
+                        android:textColor="@color/colorPrimaryDark" />
 
                 </LinearLayout>
 
@@ -282,7 +284,7 @@
                         android:layout_weight="2"
                         android:padding="5dp"
                         android:text="Total"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -294,7 +296,7 @@
                         android:gravity="end"
                         android:padding="5dp"
                         android:text="UGX 5000"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
