--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -890,13 +890,13 @@
                 app:cardCornerRadius="5dp"
                 app:cardElevation="0dp">
                 <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <RelativeLayout
                     android:id="@+id/layout_security"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
-                    android:layout_marginEnd="14dp"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="10dp">
+                    android:layout_margin="14dp">
 
 
                     <TextView
@@ -909,23 +909,116 @@
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:alpha="0.8"/>
-                    <TextView
-                        android:id="@+id/security_sub_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@id/security_title"
-                        android:text="Change Pin"
-                        android:textSize="10sp"
-                        android:textColor="#8C98A9"
-                        android:textStyle="bold"
-                        android:alpha="0.81"/>
+
                     <ImageView
                         android:id="@+id/chevron_security"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:src="@drawable/ic_right_arrow_green"/>
+                </RelativeLayout>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/layout_security_info_details"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/layout_security"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:paddingStart="5dp"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="5dp"
+                        android:paddingBottom="10dp"
+                        android:background="#f8f8ff"
+                        android:visibility="gone">
+
+
+
+                        <LinearLayout
+                            android:id="@+id/layout_change_password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="5dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toTopOf="@id/view8">
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:text="Change Password"
+                                android:textSize="12sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/colorPrimaryDark" />
+
+                            <ImageView
+                                android:id="@+id/chevron_change_password"
+                                android:layout_width="wrap_content"
+                                android:layout_height="15dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/ic_right_arrow_green"
+                                app:tint="@color/colorPrimaryDark"/>
+
+                        </LinearLayout>
+
+                        <View
+                            android:id="@+id/view8"
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            app:layout_constraintTop_toBottomOf="@id/layout_change_password"
+                            app:layout_constraintBottom_toTopOf="@id/layout_update_security_qns"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:background="@color/colorPrimary"
+                            android:alpha=".79" />
+
+                        <LinearLayout
+                            android:id="@+id/layout_update_security_qns"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:clickable="true"
+                            android:focusable="true"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/view8">
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:text="Update Security Questions"
+                                android:textSize="12sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/colorPrimaryDark" />
+
+                            <ImageView
+                                android:id="@+id/chevron_update_security_qns"
+                                android:layout_width="wrap_content"
+                                android:layout_height="15dp"
+                                android:layout_gravity="center_vertical"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/ic_right_arrow_green"
+                                app:tint="@color/colorPrimaryDark"/>
+
+
+
+                        </LinearLayout>
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
