--- a/app/src/main/res/layout/dialog_successful_message.xml
+++ b/app/src/main/res/layout/dialog_successful_message.xml
@@ -39,7 +39,9 @@
         android:id="@+id/pop_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +58,8 @@
             android:text=""
             android:textSize="16sp"
             android:textColor="#222222"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/dialog_success_txt_message"
             android:layout_width="match_parent"
@@ -106,6 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rectangular_blue_solid"
         android:text="ok"
         android:textColor="@color/white"
