--- a/app/src/main/res/layout-ldrtl/layout_product_grid_sm.xml
+++ b/app/src/main/res/layout-ldrtl/layout_product_grid_sm.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/product_cover"
                 android:layout_width="@dimen/lg_card_cover_width"
                 android:layout_height="@dimen/lg_card_cover_height"
-                android:src="@drawable/placeholder"
+                android:src="@drawable/new_product"
                 android:clickable="true"
                 android:scaleType="fitCenter" />
 
