--- a/app/src/main/res/layout/buy_inputs_search_results.xml
+++ b/app/src/main/res/layout/buy_inputs_search_results.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:clickable="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/placeholder"
+        android:src="@drawable/new_product"
         android:layout_centerVertical="true" />
 
     <ImageView
