--- a/app/src/main/res/layout/buy_input_product_home_card.xml
+++ b/app/src/main/res/layout/buy_input_product_home_card.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="10dp"
-                android:src="@drawable/placeholder" />
+                android:src="@drawable/new_product" />
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/shimmerFrame"
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
+                    android:src="@drawable/new_product" />
 
             </com.facebook.shimmer.ShimmerFrameLayout>
 
