--- a/app/src/main/res/layout/buy_inputs_card_cart_items.xml
+++ b/app/src/main/res/layout/buy_inputs_card_cart_items.xml
@@ -22,7 +22,8 @@
             android:layout_width="80dp"
             android:layout_height="120dp"
             android:layout_margin="5dp"
-            android:src="@drawable/placeholder"
+            android:background="#e4e4e4"
+            android:src="@drawable/new_product"
             android:scaleType="fitCenter" />
 
         <LinearLayout
