--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -31,7 +31,7 @@
             android:id="@+id/title2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Get Started"
+            android:text="Sign Up"
             android:textColor="#fff"
             android:textSize="34sp"
             android:textStyle="bold"
@@ -155,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
                 android:background="@drawable/round_button_dark_green"
-                android:text="Get Started"
+                android:text="Sign Up"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textAllCaps="false"
