--- a/app/src/main/res/layout/layout_coming_soon.xml
+++ b/app/src/main/res/layout/layout_coming_soon.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="15dp"
+        android:paddingBottom="40dp"
         android:background="@drawable/background_custom_dialog"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,14 +24,23 @@
             android:src="@drawable/ic_close_white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/emaisha_title1"
+            app:layout_constraintBottom_toTopOf="@id/logo"
             app:tint="@color/colorPrimary" />
+        <ImageView
+            android:id="@+id/logo"
+            android:src="@drawable/logo_vector"
+            android:layout_width="80dp"
+            android:paddingBottom="10dp"
+            android:layout_height="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/coming_soon_close"
+            android:layout_marginTop="20dp"/>
 
         <TextView
             android:id="@+id/emaisha_title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:text="eMaisha Pay"
             android:textColor="@color/colorPrimary"
@@ -40,13 +49,12 @@
             app:layout_constraintBottom_toTopOf="@id/text_instant_loans"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/coming_soon_close" />
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
 
         <TextView
             android:id="@+id/text_instant_loans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:text="Instant Loans"
             android:textColor="@color/colorPrimary"
             android:textSize="30sp"
