--- a/app/src/main/res/layout/layout_product_18_grid_sm.xml
+++ b/app/src/main/res/layout/layout_product_18_grid_sm.xml
@@ -15,7 +15,7 @@
             android:layout_height="@dimen/lg_card_cover_height"
             android:clickable="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/placeholder" />
+            android:src="@drawable/new_product" />
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmerFrame"
@@ -28,7 +28,7 @@
                 android:layout_height="@dimen/lg_card_cover_height"
                 android:clickable="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/placeholder" />
+                android:src="@drawable/new_product" />
 
         </com.facebook.shimmer.ShimmerFrameLayout>
 
