--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -126,7 +126,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="6dp"
                                     app:drawableEndCompat="@drawable/ic_chevron_down"
-                                    app:drawableStartCompat="@drawable/ic_ug_flag"
+                                    app:drawableStartCompat="@drawable/ic_uganda_1_"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:layout_constraintBottom_toBottomOf="@id/user_phone"
