--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -85,7 +85,7 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_marginBottom="10dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/text_beneficiary"
@@ -282,7 +282,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
                 <LinearLayout
 
                     android:layout_width="match_parent"
