--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_4.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_4.xml
@@ -16,8 +16,7 @@
                 android:layout_height="?actionBarSize"
                 android:background="@color/colorPrimary"
                 app:titleTextColor="@color/white"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:navigationIcon="@drawable/ic_chevron_left_white"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
 
 
