--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
@@ -108,7 +108,7 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/edit_text_bottom_line_gray"
             android:gravity="center"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
             android:textColor="@color/colorPrimaryDark"
@@ -124,7 +124,7 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/edit_text_bottom_line_gray"
             android:gravity="center"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
             android:textColor="@color/colorPrimaryDark"
@@ -140,7 +140,7 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/edit_text_bottom_line_gray"
             android:gravity="center"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
             android:textColor="@color/colorPrimaryDark"
@@ -156,7 +156,7 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/edit_text_bottom_line_gray"
             android:gravity="center"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="1"
             android:textSize="16sp"
             android:textColor="@color/colorPrimaryDark"
