--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -232,6 +232,139 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="5dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Street Address 1"
+                            android:textSize="16sp"
+                            android:layout_marginBottom="5dp" />
+
+                        <EditText
+                            android:id="@+id/et_street_address_1"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/outline_primary"
+                            android:inputType="text"
+                            android:textColor="@color/textColor"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_marginStart="5dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Street Address 2"
+                            android:textSize="16sp"
+                            android:layout_marginBottom="5dp" />
+
+                        <EditText
+                            android:id="@+id/et_street_address_2"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/outline_primary"
+                            android:inputType="text"
+                            android:textColor="@color/textColor"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="5dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="City"
+                            android:textSize="16sp"
+                            android:layout_marginBottom="5dp" />
+
+                        <EditText
+                            android:id="@+id/et_city"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/outline_primary"
+                            android:inputType="text"
+                            android:textColor="@color/textColor"/>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical"
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Country"
+                            android:textSize="16sp"
+                            android:layout_marginBottom="5dp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:layout_weight="1"
+                            android:layout_alignParentTop="true"
+                            android:background="@drawable/rectangular_blue_solid"
+                            android:orientation="horizontal">
+
+                            <Spinner
+                                android:id="@+id/sp_country"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:background="@android:color/transparent"
+                                android:gravity="center"
+                                android:entries="@array/bank_country"
+                                android:spinnerMode="dropdown"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_down_chevron" />
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:orientation="vertical">
 
@@ -276,6 +409,7 @@
                         android:textColor="@color/textColor"/>
 
                 </LinearLayout>
+
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/layout_mobile_money"
