--- a/app/src/main/res/layout/wallet_transaction_card.xml
+++ b/app/src/main/res/layout/wallet_transaction_card.xml
@@ -25,7 +25,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="@dimen/dimen_20dp"
                 app:autoSizeTextType="uniform"
-                android:background="@drawable/gradient_blue"
+                android:background="@drawable/rectangular_blue_solid"
                 android:gravity="center"
                 android:padding="@dimen/margin_10"
                 tools:text="JM"
