made changes in transfer

--- a/app/src/main/res/layout/fragment_wallet_pay.xml
+++ b/app/src/main/res/layout/fragment_wallet_pay.xml
@@ -116,6 +116,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/payment_method_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
