--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -155,7 +155,7 @@
                         android:background="@drawable/rectangular_blue_solid"
                         android:orientation="horizontal">
 
-                        <Spinner
+                        <AutoCompleteTextView
                             android:id="@+id/sp_bank"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -469,6 +469,7 @@
                 android:id="@+id/layout_mobile_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -680,8 +681,7 @@
                         android:inputType="number"
                         android:background="@android:color/transparent"
                         android:textAlignment="viewStart"
-                        android:textColor="@color/textColor"
-                        android:textColorHint="@color/textColorPrimaryDark"/>
+                        android:textColor="@color/black"/>
 
 
 
