--- a/app/src/main/res/layout/fragment_add_beneficiary.xml
+++ b/app/src/main/res/layout/fragment_add_beneficiary.xml
@@ -135,7 +135,7 @@
                         android:background="@drawable/rectangular_blue_solid"
                         android:orientation="horizontal">
 
-                        <AutoCompleteTextView
+                        <Spinner
                             android:id="@+id/sp_bank"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
