--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/text_scan_pay_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Please move your phone over \n a QR Code"
+                android:text="Please move your phone over \n the QR Code"
                 android:textSize="16sp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
