removed bug in POS

--- a/app/src/main/res/layout/dialog_pos_product_details.xml
+++ b/app/src/main/res/layout/dialog_pos_product_details.xml
@@ -237,7 +237,7 @@
                             android:fontFamily="@font/josefin_sans"
                             android:gravity="center"
                             android:padding="12dp"
-                            android:text="Update"
+                            android:text="Add to Cart"
                             android:textColor="#fff"
                             android:textSize="16dp"
                             android:textStyle="bold" />
