--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -191,14 +191,16 @@
             android:layout_marginTop="15dp"
             android:background="#31244A"
             android:alpha=".1"
-            app:layout_constraintTop_toBottomOf="@id/layout_emaisha_pay" />
+            app:layout_constraintTop_toBottomOf="@id/layout_emaisha_pay"
+            android:visibility="gone"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_merchant_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/view_emaisha_wallet">
+            app:layout_constraintTop_toBottomOf="@id/view_emaisha_wallet"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/image_merchant_card"
