--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -106,7 +106,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="25dp"
                             android:background="@drawable/round_button_dark_green"
-                            android:text="Get Started"
+                            android:text="Sign Up"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             android:textAllCaps="false"
@@ -116,7 +116,9 @@
                             android:id="@+id/layout_signin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/get_started_btn">
+                            android:layout_below="@id/get_started_btn"
+                            android:layout_centerHorizontal="true"
+                            android:gravity="center_horizontal">
                             <TextView
                                 android:id="@+id/signin1"
                                 android:layout_width="wrap_content"
@@ -124,8 +126,7 @@
                                 android:text="Already have account? "
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="14sp"
-                                android:textStyle="bold"
-                                android:layout_centerHorizontal="true"/>
+                                android:textStyle="bold"/>
                             <TextView
                                 android:id="@+id/signin2"
                                 android:layout_width="wrap_content"
