--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -42,7 +42,8 @@
                 android:id="@+id/map"
                 class="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="120dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
