--- a/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
+++ b/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
@@ -83,7 +83,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageButton
                 android:layout_width="wrap_content"
